# Context-Tester

./: .gitignore  README.md  benchmark_gui.py  benchmark_runner.py  bleak_house.txt  chunker_regex_.py  config.py  file_operations.py  following.txt  generate_plot.py  main.py  middlemarch.txt  moses.txt  outlier_detection.py  pg996.txt  plot_gui.py  pyproject.toml  readability_tests.py  run_gui.bat  statistical_analysis.py  streaming_api.py
Completed_Tests/: Broken-Tutu-24B.Q6_K-middlemarch.txt-3r1d.csv  Llama-3.1-8B-Instruct-Q6_K-middlemarch.txt-3r1d.csv  MiniCPM4-MCP.Q6_K-middlemarch.txt-3r1d.csv  OpenAI_gpt-oss-20b-UD-Q6_K_XL-middlemarch.txt-3r1d.csv  Rocinante-X-12B-v1a-Q6_K-middlemarch.txt-3r1d.csv  TestParams.txt  TheDrummer_Cydonia-24B-v4.1-Q6_K-middlemarch.txt-3r1d.csv  jinx-gpt-oss-20b-Q6_K-middlemarch.txt-3r1d.csv  mistralai_Mistral-Nemo-Instruct-2407-Q6_K_L-middlemarch.txt-3r1d.csv  mistralai_Mistral-Small-3.2-24B-Instruct-2506-Q6_K-middlemarch.txt-3r1d.csv  zai-org_GLM-4.5-Air-Q4_0-00001-of-00002-middlemarch.txt-3r1d-8kRope-(1rd of 32k).csv  zai-org_GLM-4.5-Air-Q4_0-00001-of-00002-middlemarch.txt-3r1d-8kRope.csv  zai-org_GLM-4.5-Air-Q4_0-00001-of-00002-middlemarch.txt-3r1d-native (1rd at 32k).csv  zai-org_GLM-4.5-Air-Q4_0-00001-of-00002-middlemarch.txt-3r1d-native-32k-32k.csv  zai-org_GLM-4.5-Air-Q4_0-00001-of-00002-middlemarch.txt-3r1d-native.csv
src/: __init__.py  benchmark_runner.py  chunker_regex.py  config.py  file_operations.py  find_last_sentence.py  fix-text.py  generate_plot.py  metadata_utils.py  outlier_detection.py  parameter_schema.py  (+5 more)
(+67 files in other folders)
