[project]
name = "context-tester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "extractous>=0.3.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "regex>=2025.7.34",
    "requests>=2.32.4",
    "statistics>=1.0.3.5",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
